--- a/Day 2 Scroll Trigger/style.css
+++ b/Day 2 Scroll Trigger/style.css
@@ -9,6 +9,9 @@ html, body {
     height: 100%;
     width: 100%;
 }
+body {
+    overflow-x: hidden;
+}
 /* Scroll Trigger */
 #page1 {
     height: 100%;
@@ -25,6 +28,18 @@ html, body {
     justify-content: center;
     align-items: center;
     background-color: #303036;
+    flex-direction: column;
+    gap: 50px;    
+}
+#page2 h1 {
+    font-size: 60px;
+    padding: 30px;
+    background-color: red;
+}
+#page2 h2 {
+    font-size: 60px;
+    padding: 30px;
+    background-color: yellow;
 }
 #page3 {
     height: 100%;
@@ -33,6 +48,29 @@ html, body {
     justify-content: center;
     align-items: center;
     background-color: #fc5130;
+}
+#page4 {
+    height: 100%;
+    width:100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #003f56;
+    padding: 5vw 0;
+}
+#page4 h1 {
+    font-size: 40vw;
+    font-weight: 600;
+    color: #000000;
+    text-transform: uppercase;
+}
+#page5 {
+    height: 100%;
+    width:100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #00b7ff;
 }
 #box {
     height: 300px;
