--- a/Day 3 Svg anim/style.css
+++ b/Day 3 Svg anim/style.css
@@ -15,9 +15,10 @@ body {
 #string {
     width: 100%;
     height: 300px;
-    /* background-color: crimson; */
+    background-color: crimson;
 }
 #pointer {
+    position: absolute;
     width: 15px;
     height: 15px;
     border-radius: 50%;
