--- a/Day 4 Project/style.css
+++ b/Day 4 Project/style.css
@@ -9,15 +9,43 @@ html, body {
     height: 100%;
     width: 100%;
 }
+#cursor {
+    width: 22px;
+    height: 22px;
+    background-color: white;
+    border-radius: 50%;
+    position: fixed;
+    font-size: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    z-index: 9;
+    color: #111;
+}
 #main {
     height: 100%;
     width: 100%;
     background-color: #111;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-#cursor {
-    width: 20px;
-    height: 20px;
-    background-color: #D9FF06;
-    border-radius: 50%;
-    position: fixed;
+#image {
+    width: 60vw;
+    height: 30vw;
+    background-color: red;
+    position: relative;
+}
+#image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+#overlay {
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    position: absolute;
+    z-index: 10;
 }
