--- a/Day 5 Project/style.css
+++ b/Day 5 Project/style.css
@@ -9,6 +9,9 @@ html, body {
     height: 100%;
     width: 100%;
 }
+body {
+    overflow-x: hidden;
+}
 #main {
     width: 100%;
     height: 100%;
@@ -29,14 +32,15 @@ html, body {
 #nav i {
     font-size: 30px;
     font-weight: 800;
+    cursor: pointer;
 }
 #full {
-    width: 40%;
+    width: 30%;
     height: 100%;
     position: absolute;
     background-color: rgba(255, 255, 255, 0.544);
     top: 0;
-    right: 0;
+    right: -30%;
     backdrop-filter: blur(10px);
     /* padding: 150px 60px; */
     display: flex;
@@ -59,4 +63,5 @@ html, body {
     padding: 5px;
     font-size: 25px;
     font-weight: 600;
+    cursor: pointer;
 }
