--- a/Day 7 Project 4/style.css
+++ b/Day 7 Project 4/style.css
@@ -1,7 +1,6 @@
 @font-face {
     font-family: neuemachina;
     src: url(./PPNeueMachina-Regular.woff);
-
 }
 * {
     margin: 0px;
@@ -13,9 +12,6 @@ html, body {
     height: 100%;
     width: 100%;
 }
-/* body {
-    background-color: #111;
-} */
 #page1 {
     height: 100%;
     width: 100%;
@@ -25,16 +21,13 @@ html, body {
     height: 100%;
     width: 100%;
     background-color: #0f0f0f;
-}
-#page3 {
-    height: 100%;
-    width: 100%;
-    background-color: #ffd7e7;
+    align-content: center;
 }
 #move {
     background-color: #d9ff06;
     display: flex;
-    padding: 3vw 0;
+    padding: 78px 0;
+    overflow: hidden;
 }
 .marque {
     display: flex;
@@ -42,11 +35,17 @@ html, body {
     gap: 3vw;
     padding: 0 1.5vw;
     flex-shrink: 0;
+    transform: translateX(-100%);
 }
 .marque h1 {
-    font-size: 3em;
+    font-size: 4.5em;
     font-family: neuemachina;
 }
 .marque img {
-    height: 80px;
+    height: 83px;
+}
+#page3 {
+    height: 100%;
+    width: 100%;
+    background-color: #ffd7e7;
 }
