--- a/Day 8 Project 5/style.css
+++ b/Day 8 Project 5/style.css
@@ -52,24 +52,27 @@ nav button {
 }
 .content {
     width: 100%;
-    height: 80%;
+    height: 70%;
     display: flex;
 }
 .part1 {
     width: 45%;
     height: 100%;
-    padding: 40px 80px;
+    padding: 40px 80px 20px 80px;
 }
 .part1 h1 {
+    /* width: 40vw; */
     font-family: "Space Mono", serif;
-    font-size: 3.5vw;
+    font-size: 42px;
+    line-height: 1.2;
     font-weight: 500;
 }
 .part1 p {
+    /* width: 40vw; */
     font-family: "Space Mono", serif;
-    font-size: 1.2vw;
+    font-size: 14.4px;
     font-weight: 500;
-    word-spacing: 2px;
+    word-spacing: 1px;
     margin: 20px 0;
 }
 .part1 button {
@@ -82,10 +85,31 @@ nav button {
     border: none;
     border-radius: 10px;
     background-color: #1f1f1f;
-    margin: 30px 0;
+    margin-top: 30px;
     padding: 15px 30px;
 }
 .part2 {
     width: 55%;
     height: 100%;
+    padding-right: 80px;
+}
+.part2 img {
+    width: 100%;
+    height: 450px;
+}
+.marquee {
+    width: 100%;
+    height: 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 100px;
+    padding: 0 80px;
+    overflow: hidden;
+}
+.marquee img {
+    width: 10%;
+    height: 40px;
+    object-fit: contain;
+    mix-blend-mode: color-burn;
 }
