--- a/Day 8 Project 5/style.css
+++ b/Day 8 Project 5/style.css
@@ -9,7 +9,7 @@ html, body {
     height: 100%;
     width: 100%;
 }
-section {
+.section1 {
     height: 100%;
     width: 100%;
 }
@@ -52,25 +52,27 @@ nav button {
 }
 .content {
     width: 100%;
-    height: 70%;
+    /* height: 70%; */
     display: flex;
+    justify-content: space-between;
+    padding: 4vw 4vw 5vw 4vw;
 }
 .part1 {
-    width: 45%;
-    height: 100%;
-    padding: 40px 80px 20px 80px;
+    width: 40vw;
+    /* height: 100%; */
+    /* padding: 40px 80px 20px 80px; */
 }
 .part1 h1 {
-    /* width: 40vw; */
+    /* width: 100%; */
     font-family: "Space Mono", serif;
-    font-size: 42px;
+    font-size: 3.5vw;
     line-height: 1.2;
     font-weight: 500;
 }
 .part1 p {
     /* width: 40vw; */
     font-family: "Space Mono", serif;
-    font-size: 14.4px;
+    font-size: 0.9vw;
     font-weight: 500;
     word-spacing: 1px;
     margin: 20px 0;
@@ -89,13 +91,13 @@ nav button {
     padding: 15px 30px;
 }
 .part2 {
-    width: 55%;
-    height: 100%;
-    padding-right: 80px;
+    width: 45vw;
+    /* height: 100%; */
+    /* padding: 0 80px; */
 }
 .part2 img {
     width: 100%;
-    height: 450px;
+    height: 25vw;
 }
 .marquee {
     width: 100%;
@@ -103,13 +105,37 @@ nav button {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 100px;
+    gap: 9vw;
     padding: 0 80px;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 .marquee img {
     width: 10%;
     height: 40px;
     object-fit: contain;
     mix-blend-mode: color-burn;
+}
+.section2 {
+    height: 100%;
+    width: 100%;
+}
+.services {
+    width: 55vw;
+    display: flex;
+    /* justify-content: space-between; */
+    gap: 2vw;
+    align-items: center;
+    padding-left: 80px;
+}
+.services h1 {
+    font-family: sans-serif;
+    font-size: 2.5vw;
+    padding: 3px;
+    background-color: #bafe66;
+}
+.services p {
+    /* width: 50vw; */
+    font-family: "Space Mono", serif;
+    font-size: 0.8vw;
+    font-weight: 500;
 }
