--- a/Day 8 Project 5/style.css
+++ b/Day 8 Project 5/style.css
@@ -107,25 +107,25 @@ nav button {
     align-items: center;
     gap: 9vw;
     padding: 0 80px;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
 }
 .marquee img {
-    width: 10%;
+    width: 7vw;
     height: 40px;
-    object-fit: contain;
-    mix-blend-mode: color-burn;
+    /* object-fit: contain;
+    mix-blend-mode: color-burn; */
 }
 .section2 {
     height: 100%;
     width: 100%;
+    padding: 50px 80px;
 }
 .services {
-    width: 55vw;
+    width: 50vw;
     display: flex;
     /* justify-content: space-between; */
     gap: 2vw;
     align-items: center;
-    padding-left: 80px;
 }
 .services h1 {
     font-family: sans-serif;
@@ -138,4 +138,64 @@ nav button {
     font-family: "Space Mono", serif;
     font-size: 0.8vw;
     font-weight: 500;
+}
+.container {
+    width: 100%;
+    height: 80%;
+    display: flex;
+    justify-content: space-between;
+    margin: 50px 0;
+    flex-wrap: wrap;
+    gap: 2.5vw;
+}
+.container .box {
+    width: 48%;
+    height: 45%;
+    display: flex;
+    /* justify-content: space-between; */
+    flex-shrink: 0;
+    border: 3px solid #1f1f1f;
+    border-radius: 30px;
+    box-shadow: 0px 10px 0px #1f1f1f;
+    padding: 50px;
+}
+.black {
+    background-color: #1f1f1f ;
+}
+.white {
+    background-color: #fff;
+}
+.box-part1 {
+    width: 50%;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+}
+.box-part1 h2 {
+    width: 80%;
+    font-size: 1.5vw;
+    font-weight: 500;
+    font-family: "Space Mono", serif;
+    background-color: #bafe66;
+    border-radius: 6px;
+    padding: 0 8px;
+}
+.box-part1 h4 {
+    font-size: 1.2vw;
+    font-weight: 500;
+    font-family: "Space Mono", serif;
+}
+.box-part1 h4 i {
+    font-size: 1.5vw;
+    background-color: #1f1f1f;
+    color: #fff;
+    border-radius: 50%;
+    padding: 2px;
+}
+.box-part2 {
+    width: 50%;
+}
+.box-part2 img {
+    width: 100%;
+    height: 100%;
 }
