--- a/Day 8 Project 5/style.css
+++ b/Day 8 Project 5/style.css
@@ -52,25 +52,21 @@ nav button {
 }
 .content {
     width: 100%;
-    /* height: 70%; */
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 4vw 4vw 5vw 4vw;
 }
 .part1 {
     width: 40vw;
-    /* height: 100%; */
-    /* padding: 40px 80px 20px 80px; */
 }
 .part1 h1 {
-    /* width: 100%; */
     font-family: "Space Mono", serif;
     font-size: 3.5vw;
     line-height: 1.2;
     font-weight: 500;
 }
 .part1 p {
-    /* width: 40vw; */
     font-family: "Space Mono", serif;
     font-size: 0.9vw;
     font-weight: 500;
@@ -78,8 +74,6 @@ nav button {
     margin: 20px 0;
 }
 .part1 button {
-    /* width: 400px; */
-    /* height: 80px; */
     color: #fff;
     font-family: "Space Mono", serif;
     font-size: 0.9vw;
@@ -91,9 +85,7 @@ nav button {
     padding: 15px 30px;
 }
 .part2 {
-    width: 45vw;
-    /* height: 100%; */
-    /* padding: 0 80px; */
+    width: 40vw;
 }
 .part2 img {
     width: 100%;
@@ -107,23 +99,20 @@ nav button {
     align-items: center;
     gap: 9vw;
     padding: 0 80px;
-    /* overflow-x: hidden; */
 }
 .marquee img {
     width: 7vw;
     height: 40px;
-    /* object-fit: contain;
-    mix-blend-mode: color-burn; */
 }
 .section2 {
     height: 100%;
     width: 100%;
     padding: 50px 80px;
+    overflow: hidden;
 }
 .services {
     width: 50vw;
     display: flex;
-    /* justify-content: space-between; */
     gap: 2vw;
     align-items: center;
 }
@@ -134,7 +123,6 @@ nav button {
     background-color: #bafe66;
 }
 .services p {
-    /* width: 50vw; */
     font-family: "Space Mono", serif;
     font-size: 0.8vw;
     font-weight: 500;
@@ -149,10 +137,9 @@ nav button {
     gap: 2.5vw;
 }
 .container .box {
-    width: 48%;
-    height: 45%;
+    width: 45%;
+    height: 44%;
     display: flex;
-    /* justify-content: space-between; */
     flex-shrink: 0;
     border: 3px solid #1f1f1f;
     border-radius: 30px;
@@ -198,4 +185,137 @@ nav button {
 .box-part2 img {
     width: 100%;
     height: 100%;
+    padding-left: 50px;
+}
+.section3 {
+    width: 100%;
+    height: 100%;
+    padding: 30px 80px;
+}
+.section3 .box1 {
+    width: 100%;
+    height: 35%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 30px;
+    padding: 0 50px;
+    background-color: #f3f3f3;
+}
+.box1 .part1 {
+    width: 45%;
+    margin: 30px 0;
+}
+.box1 h1 {
+    font-size: 1.7vw;
+    font-family: "Noto Sans Mono", serif;
+}
+.box1 .part1 p {
+    font-size: 0.8vw;
+    font-family: "Space Mono", serif;
+    margin: 10px 0;
+}
+.box1 .part1 button {
+    color: #fff;
+    font-family: "Space Mono", serif;
+    font-size: 0.9vw;
+    font-weight: 500;
+    border: none;
+    border-radius: 10px;
+    background-color: #1f1f1f;
+    margin-top: 15px;
+    padding: 15px 30px;
+}
+.box1 .part2 {
+    width: 30%;
+    height: 100%;
+    border: none;
+}
+.box1 .part2 img {
+    width: 20vw;
+    height: 100%;
+}
+.cases {
+    width: 57vw;
+    display: flex;
+    gap: 50px;
+    align-items: center;
+    margin: 100px 0 50px 0;
+}
+.cases h1 {
+    font-family: "Space Mono", serif;
+    font-size: 1.8vw;
+    font-weight: 500;
+    padding: 0 3px;
+    word-spacing: -8px;
+    border-radius: 5px;
+    box-sizing: content-box;
+    background-color: #bafe66;
+}
+.cases p {
+    font-family: "Noto Sans Mono", serif;
+    font-size: 0.78vw;
+    font-weight: 500;
+}
+.section3 .box2 {
+    width: 100%;
+    height: 35%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    align-items: center;
+    border-radius: 30px;
+    padding: 30px 10px;
+    background-color: #1f1f1f;
+}
+.box2 .part1 , .part2{
+    width: 33.3%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content:space-between ;
+    border-right: 2px solid #fff;
+    padding: 0 2.5vw;
+}
+.box2 .part3{
+    width: 33.3%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content:space-between ;
+    padding: 0 2.5vw;
+}
+.box2 .part1 p, .part2 p, .part3 p{
+    font-size: 0.9vw;
+    font-weight: 500;
+    font-family: "Space Mono", serif;
+    color: #fff;
+    margin: 10px 0;
+}
+.box2 .part2 {
+    width: 33.3%;
+    height: 100%;
+}
+.box2 .part3 {
+    width: 33.3%;
+    height: 100%;
+}
+.box2 .part1 h4, .part2 h4, .part3 h4{
+    font-size: 0.95vw;
+    font-weight: 500;
+    font-family: "Space Mono", serif;
+    color: #fff;
+}
+.box2 .part1 h4, .part2 h4, .part3 h4{
+    font-size: 0.95vw;
+    font-weight: 500;
+    font-family: "Space Mono", serif;
+    color: #fff;
+    margin: 0 0 10px 0;
+}
+.box2 .part1 i, .part2 i, .part3 i{
+    font-size: 1vw;
+    font-weight: 500;
+    font-family: "Space Mono", serif;
+    color: #bafe66;
 }
